# fastapi_interview

./: LICENSE  README.md  app.db  pyproject.toml
app/: db.py  main.py  models.py  schemas.py  utils.py
app/routers/: assets.py  vulnerabilities.py
tests/: test_assets.py  test_vulns.py
