[project]
name = "fastapi-security-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "anyio>=4.10.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
